--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
-        "symfony/yaml": "^4.0"
+        "symfony/yaml": "^4.0",
+        "symfony/twig-bundle": "^4.0"
     },
     "require-dev": {
         "symfony/dotenv": "^4.0"
